fix animation menus overflow hidden

--- a/layout/_carte.scss
+++ b/layout/_carte.scss
@@ -58,6 +58,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    overflow: hidden;
 
     @media (min-width: 1024px) {
       align-items: center;
